# PhyloCRISP

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: README.md
example_data/mammals/: bootstrap_trees_full.standardized.nw  reference_tree.standardized.nw
src/: consensus_app.py
src/Consensus/: __init__.py  _app_options.py  _booster.py  _c_pruning.py  _consensus.py  _greedy.py  _metrics.py  _simulate_tree.py  _visualize.py  main.py
src/booster/: .gitignore
src/booster/pysrc/: _test_equivalent_.py  example.py
src/booster/src/: M1M2_hashmap.c  M1M2_hashmap.h  Makefile  booster.c  debug.c  heavy_paths.c  heavy_paths.h  node_stack.c  node_stack.h  rapid_transfer.c  rapid_transfer.h  split.c  split.h  test.c  transfer_distance.c  transfer_distance.h  tree.c  tree.h  tree_utils.c
third_party_licenses/: README.md
